# cfdna-chromatin-xai

./: .gitignore  CHANGELOG.md  LICENSE  README.html  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis/fetal_fraction/: FF_IMPLEMENTATION.md  build_openness_atlas.py  extract_ff_shap.R  ff_tissue_proportion.py  run_ff_tissue_track.py  s3_atlas.py
analysis/fetal_fraction/reference/: README.md  ff_reference_manifest.json
data/access/: manifest.json
data/histone/: manifest.json
docs/: benchmarking.md  data_provenance.md
examples/: housekeeping_tss_chr19.json
scripts/: fetch_access.py  fetch_fasta.py  fetch_ff_reference.py  fetch_histone.py  run_demo.py  run_ff_shap.py
src/cfdna_chromatin/: __init__.py  accessibility.py  attribute.py  benchmark.py  engine.py  genome.py  histone.py  liftover.py  references.py  selection.py
tests/: test_accessibility.py  test_attribute.py  test_engine.py  test_histone.py  test_integration.py  test_liftover.py  test_selection.py
